# LSTM-Stock-Predictor

./: .gitignore  README.md  README_EN.md  app.py  pyproject.toml  query_daily_fluctuation.py  requirements.txt
data/: stock_info_20260203.jsonl
