[project]
name = "lstm-stock-predictor"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
  "akshare",
  "flask",
  "matplotlib",
  "numpy",
  "pandas",
  "requests",
  "scikit-learn",
  "seaborn",
  "streamlit",
  "torch",
  "tqdm",
  "tushare",
  "yfinance",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["app"]
